--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
   </head>
   <body>
     <div class="container">
-      <div class="item"></div>
-      <div class="item"></div>
+      <div class="item">
+        <button class="btn">1</button>
+      </div>
+      <div class="item">
+        <button class="btn">2</button>
+      </div>
       <div class="item"></div>
       <div class="item"></div>
       <div class="item"></div>
