--- a/index.html
+++ b/index.html
@@ -10,18 +10,32 @@
   <body>
     <div class="container">
       <div class="item">
-        <button class="btn">1</button>
+        <button class="button">1</button>
       </div>
       <div class="item">
-        <button class="btn">2</button>
+        <button class="button">2</button>
       </div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
+      <div class="item">
+        <button class="button">3</button>
+      </div>
+      <div class="item">
+        <button class="button">4</button>
+      </div>
+      <div class="item">
+        <button class="button">5</button>
+      </div>
+      <div class="item">
+        <button class="button">6</button>
+      </div>
+      <div class="item">
+        <button class="button">7</button>
+      </div>
+      <div class="item">
+        <button class="button">8</button>
+      </div>
+      <div class="item">
+        <button class="button">9</button>
+      </div>
     </div>
   </body>
 </html>
